--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
                     }
                 };
                 $(".register").TFPopup(options2);
+				//console.log($('#modal_content'));
 				var options3 = {
 					modal		: true,
-					content		: $('.modal').attr('title'),
+					content		: $('#modal_content'),
 					useMarkup	: true,
 					ajaxContent	: false
 				};
@@ -128,5 +129,17 @@
 		<p>Simple <a href="#" class="mailing_list">Mailing List</a>.</p>
         <p>Simple <a href="#" class="register">Register/Login Form</a>.</p>
         <p>Simple <a href="#" class="modal" title="This is the modal content.">Modal</a>.</p>
+		<div id="modal_content" class="hidden">
+			<h2>Join Our Mailing List</h2>
+			<form action="" name="mailing_list_form" id="mailing_list_form" method="post">
+				<div class="form_row clearfix">
+					<label for="form_email">Email: <span title="Required Field">*</span></label>
+					<input type="text" name="email" id="form_email" value="" />
+				</div>
+				<div class="form_row submit">
+					<input type="submit" name="form_submit" id="form_submit" class="submit_button" value="Join"/>
+				</div>
+			</form>	
+		</div>
 	</body>
 </html>
