--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                     }
                 };
                 $(".register").TFPopup(options2);
-				//console.log($('#modal_content'));
 				var options3 = {
 					modal		: true,
 					content		: $('#modal_content'),
@@ -131,7 +130,8 @@
         <p>Simple <a href="#" class="modal" title="This is the modal content.">Modal</a>.</p>
 		<div id="modal_content" class="hidden">
 			<h2>Join Our Mailing List</h2>
-			<form action="" name="mailing_list_form" id="mailing_list_form" method="post">
+			<p><strong>Annoyingly</strong>, forms don't work at the moment</p>
+			<form action="" name="mailing_list_form" method="post">
 				<div class="form_row clearfix">
 					<label for="form_email">Email: <span title="Required Field">*</span></label>
 					<input type="text" name="email" id="form_email" value="" />
