Added CSS disclaimer

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
             });
 		</script>
 		<style>
+		/*
+			These styles are all surplous and are not needed by defaut
+		*/
 		h1 {
 			font-size:25px;
 			font-family:Arial, sans-serif;
