Changed docs link

--- a/index.html
+++ b/index.html
@@ -209,6 +209,6 @@
 		
 		<h2>Append data to the end of the content URL</h2>
 		<p>Easily append data to the end of the content URL. This is especially useful if you want to pass custom data across to each popup, without targeting each popup individually.</p>
-        <p>View the <a href="#" id="append_link" data-tf_append="var=Test Var">modal with replacement content demo</a>.</p>
+        <p>View the <a href="#" id="append_link" data-tf_append="var=Test Var">popup with appended data</a>.</p>
 	</body>
 </html>
