Updates href attr call and adds new inline content methods/options

--- a/demos/index.html
+++ b/demos/index.html
@@ -123,7 +123,7 @@
 	<a href="http://toddish.co.uk?pw=600&amp;ph=300" class="popup_gallery">External Site</a><br>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-	<script src="../assets/js/popup.js"></script>
+	<script src="../assets/js/jquery.popup.js"></script>
 	<script>
 		$(function(){
 
